objects/SCB_Custom_Setting__c/SCB_Custom_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store setting for SCB co-branding site</description>
    <label>SCB_Custom_Setting</label>
</CustomObject>