objects/SCB_Custom_Setting__c/fields/FundChart_URL__c.field-meta.xml
<CustomField>
    <fullName>FundChart_URL__c</fullName>
    <label>FundChart_URL</label>
    <type>Url</type>
</CustomField>