objects/SCB_Custom_Setting__c/fields/FundSchema__c.field-meta.xml
<CustomField>
    <fullName>FundSchema__c</fullName>
    <label>FundSchema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>