objects/SCB_Custom_Setting__c/fields/PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_URL__c</fullName>
    <label>PDF_URL</label>
    <type>Url</type>
</CustomField>