objects/SCB_Custom_Setting__c/fields/SCB_CertName__c.field-meta.xml
<CustomField>
    <fullName>SCB_CertName__c</fullName>
    <label>SCB_CertName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>