objects/SCB_Custom_Setting__c/fields/WebService_Password__c.field-meta.xml
<CustomField>
    <fullName>WebService_Password__c</fullName>
    <label>WebService Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>