objects/SCB_Custom_Setting__c/fields/WebService_URL__c.field-meta.xml
<CustomField>
    <fullName>WebService_URL__c</fullName>
    <label>WebService URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>