objects/SCB_Custom_Setting__c/fields/WebService_Username__c.field-meta.xml
<CustomField>
    <fullName>WebService_Username__c</fullName>
    <label>WebService Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>